@@ -1,3 +1,8 @@
+2004-05-11  Vin Shelton  <acs@xemacs.org>
+
+	* automated/tag-test.el: Use a temp directory to avoid conflicts
+	with extra TAGS files.
+
 2004-05-08  Vin Shelton  <acs@xemacs.org>
 
 	* automated/tag-test.el: Created.
